# MATE-2026

./: ARCHITECTURE_DIAGRAM.md  COMPLETION_REPORT.txt  FILE_MANIFEST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INSTALLATION_GUIDE.md  INTEGRATION_SUMMARY.md  MAVLINK_SETUP.md  PIX6_HARDWARE_SETUP.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_INDEX.md  START_HERE.md  TESTING_DIAGNOSTICS.md  VERIFICATION_CHECKLIST.md  install.sh  requirements.txt  setup.sh
arduino/sketch/: sketch.ino
colmap/: frame_splicer.py
src/rov_control/: README.md  package.xml  setup.py
src/rov_control/config/: control_params.yaml
src/rov_control/launch/: arm_only_launch.py  camera_viewer_only_launch.py  control_launch.py  photogrammetry_only_launch.py  slam_only_launch.py
src/rov_control/rov_control/: arm_encoder_bridge_node.py  camera_viewer_node.py  crab_trigger_node.py  dashboard_node.py  gamepad_node.py  geometry_utils.py  photogrammetry_node.py  qgc_video_bridge_node.py  slam_image_bridge_node.py
src/rov_control/test/: test_photogrammetry_node.py
src/rov_mavlink/: package.xml  setup.cfg  setup.py
src/rov_mavlink/config/: mavlink_params.yaml
src/rov_mavlink/launch/: mavlink_launch.py
src/rov_mavlink/rov_mavlink/: __init__.py  mavlink_bridge_node.py  mavlink_utils.py
src/rov_msgs/: CMakeLists.txt  package.xml
src/rov_msgs/msg/: ArmServoCommand.msg  CrabClassification.msg  CrabClassifyTrigger.msg  RovStatus.msg  SensorData.msg  (+1 more)
src/rov_onboard/: package.xml  setup.cfg  setup.py
src/rov_slam/: package.xml  setup.cfg  setup.py
(+22 files in other folders)
